@@ -2,6 +2,7 @@
 * Move flags to DifxJob so combinig multiple subarrays results in accurate
   application of flags.  NOTE: This breaks the API
 * Load > 1 pulsar polynomial from a file
+* Add network table infrastructure
 
 2.11
 * Post DiFX-1.5
